--- a/Layouts/app/src/main/res/values/strings.xml
+++ b/Layouts/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Layouts</string>
+    <string name="title">Noche de Lluvia</string>
+    <string name="date">09 FEB 2019</string>
+    <string name="info">Es una noche de lluvia. Es un buen momento para quedarse en casa :)</string>
+    <string name="liked">ME GUSTA</string>
+    <string name="comment">COMENTAR</string>
 </resources>
