--- a/GeoQuiz/app/src/main/res/values/strings.xml
+++ b/GeoQuiz/app/src/main/res/values/strings.xml
@@ -1,6 +1,12 @@
 <resources>
     <string name="app_name">GeoQuiz</string>
-    <string name="question">¿Es Lima la capital de Perú?</string>
+    <string name="question_peru">¿Es Lima la capital de Perú?</string>
+    <string name="question_chile">¿Es Arica la capital de Chile?</string>
+    <string name="question_colombia">¿Es Caracas la capital de Colombia?</string>
     <string name="yes">Si</string>
     <string name="no">No</string>
+    <string name="previous">Anterior</string>
+    <string name="next">Siguiente</string>
+    <string name="correct">Es Correcto</string>
+    <string name="incorrect">Es Incorrecto</string>
 </resources>
