--- a/GeoQuiz/app/src/main/res/values/strings.xml
+++ b/GeoQuiz/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">GeoQuiz</string>
     <string name="question_peru">¿Es Lima la capital de Perú?</string>
     <string name="question_chile">¿Es Arica la capital de Chile?</string>
-    <string name="question_colombia">¿Es Caracas la capital de Colombia?</string>
+    <string name="question_colombia">¿Es Bogotá una ciudad de Colombia?</string>
     <string name="yes">Si</string>
     <string name="no">No</string>
     <string name="previous">Anterior</string>
